Piano UI Updates
- Condense common piano key properties into one selector
- Change piano key color on hover and click

--- a/styles.css
+++ b/styles.css
@@ -17,25 +17,33 @@ h1 {
     position: relative;
 }
 
+.key {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    border-radius: 0% 0% 8px 8px;
+}
+
+.key:hover {
+    background-color: #0593A2;
+}
+
+.key:active {
+    background-color: #103778;
+}
+
 .white {
     background-color: white;
     width: 10%;
     height: 100%;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
     position: relative;
     z-index: 0;
 }
 
 .black {
     background-color: black;
-    color: white;
     width: 6%;
     height: 60%;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
     position: absolute;
     z-index: 1;
 }
